--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>Imperial Noticias</title>
-    <link rel="shortcut icon" href="img/logo-site.png" type="image/x-icon">
+    <title>Imperial</title>
+    <link rel="shortcut icon" href="img/icon/logo-site.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -21,33 +21,39 @@
 
     <main>
         <article>
-            <h1>Por que o Lula Comia Calangoos?</h1>
+            <h1>Lorem ipsum</h1>
 
-            <p>
-                Dizem as antigas lendas que o ex-presidente Lula comia os pobres calanguinhos. Será que isso é real? Hoje vamos análisar esses fatos.
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur totam numquam ipsa, explicabo ex quibusdam eos consectetur iure, illo id accusamus officiis enim voluptatum consequuntur veritatis repellendus tempora cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, nemo atque at libero accusantium beatae dolore? Libero sed sapiente omnis recusandae nam, vero iure pariatur eius quo temporibus vitae? Quo.</p>
 
-            <img src="img/pp.jpg" alt="foto de um calango comido pelo lula">
+            <picture>
+                <source media="(max-width: 670px)" srcset="img\tree-pq.jpg">
+                <img src="img/tree.jpg" alt="Imagem de arvore">
+            </picture>
 
-            <h2>Primeiras Análises</h2>
+            <h2>Lorem ipsum</h2>
 
-            <p>Vemos claramente um meme (na imagem abaixo do texto) onde Lula está vendo a sua refeição preferida próxima. E como sabemos que brincadeiras sempre condizem com a realidade, iremos considerar esse fato verdadeiro</p>
-            <img src="img/lula-calango.jpg" alt="Lula querendo comer um calango">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur necessitatibus, reprehenderit delectus voluptatum vitae mollitia voluptates beatae est ea provident omnis. Aut, doloribus sed! Laboriosam nihil sint dignissimos quod voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis soluta deserunt ullam officiis iure repellat quos odit, hic magnam est possimus ut exercitationem non ab eligendi odio doloribus pariatur! Quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ea id, nulla reprehenderit qui ipsum incidunt eaque iste quibusdam optio sit, consectetur delectus ducimus. Quasi, hic? Odio expedita eum quia!</p>
 
-            <h2>Por que comer Calango?</h2>
-            <p>Um fato é que há uma déficit considerável de maneiras de satisfazer os desejos carnais do sertão nordestino, logo, por isso, nosso ex-presidente comia o <a href="https://www.instagram.com/caua_cbarreto/following/" target="_blank" class="externo">Calangoos</a></p>
+            <picture>
+                <source media="(max-width: 670px)" srcset="img\fisherman-pq.jpg">
+                <img src="img/fisherman.jpg" alt="imagem de um farol">
+            </picture>
+
+            <h2>Lorem ipsum</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, sit! Ab voluptatibus quidem consequuntur, sequi magni quo illo tempora vitae beatae eius similique porro, illum quisquam nesciunt laboriosam consequatur incidunt?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos porro nihil hic beatae. Ab, suscipit repudiandae totam at exercitationem mollitia placeat magni fuga natus laborum voluptatem, iure deleniti hic. Mollitia.</p>
 
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iK7Y3MbfusI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/txvUQHtM6FI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
-            <p class="creditos">Créditos: <a href="https://youtu.be/iK7Y3MbfusI" target="_blanc" class="externo">A triste infância do Lula...</a></p>
+            <p class="creditos">Banda: <a href="https://pt.wikipedia.org/wiki/Terno_Rei" target="_blanc" class="externo">Terno Rei</a></p>
         </article>
         
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/rafaelvizu" target="_blanc">Rafael Vizú<img src="img/github-logo.png" alt="GitHub do criador"></a>
+        <p>Site criado por <a href="https://github.com/rafaelvizu" target="_blanc">Rafael Vizú<img src="img/icon/github-logo.png" alt="GitHub do criador"></a>
         </p>
     </footer>
 </body>
